--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   crypto: ^3.0.6
   convert: ^3.1.2
+  uuid: ^4.5.1
   logger:
     path: ./logger
   provider: ^6.1.2
