--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -32,10 +32,12 @@ dependencies:
     sdk: flutter
   code_scout:
     path: ../
+  dio: ^5.8.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
