--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,9 @@ dependencies:
   crypto: ^3.0.6
   convert: ^3.1.2
   uuid: ^4.5.1
-  logger:
-    path: ./logger
   provider: ^6.1.2
   archive: ^3.3.2
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
